--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
         .im {
             width: 19vw;
             height: 35vh;
+            
+        }
+        .im:hover{
+            transform: scaleX(-1);
         }
         h4 {
             color: aliceblue;
